# rust_examples

./: .gitignore  README.md
Algorithm/: README.md
Algorithm/Sorting/: README.md
C. Matzinger/: README.md
C. Matzinger/Hands-On Data Structures and Algorithms with Rust/: README.md
Games/: README.md
Games/guess_number/: README.md
Games/jokes/: Cargo.toml  README.md
N. Kultin/: README.md
N. Kultin/C&C++ in exercises and examples/: README.md
Rust Cookbook/: README.md
Rust Cookbook/Algorithms/: README.md
Rust Cookbook/Command Line/: README.md
Rust Cookbook/Compression/: README.md
Rust Cookbook/Concurrency/: README.md
Rust Cookbook/Cryptography/: README.md
Rust Cookbook/Data Structures/: README.md
Rust Cookbook/Database/: README.md
Rust Cookbook/Date and Time/: README.md
Rust Cookbook/Development Tools/: README.md
Rust Cookbook/Encoding/: README.md
Rust Cookbook/Encoding/Structured Data/deserialize_toml_configuration_file_using_serde/: Cargo.toml
Rust Cookbook/Encoding/Structured Data/deserialize_toml_configuration_file_using_serde/src/: main.rs
Rust Cookbook/Error Handling/: README.md
Rust Cookbook/File System/: README.md
Rust Cookbook/Hardware Support/: README.md
Rust Cookbook/Memory Management/: README.md
Rust Cookbook/Network/: README.md
Rust Cookbook/Operating System/: README.md
Rust Cookbook/Science/: README.md
Rust Cookbook/Text Processing/: README.md
Rust Cookbook/Web Programming/: README.md
Rust Cookbook/Web Programming/Clients/Calling a Web API/create_and_delete_gist_with_github_api/: Cargo.toml
Rust Cookbook/Web Programming/Clients/Calling a Web API/create_and_delete_gist_with_github_api/src/: main.rs
Rust Cookbook/Web Programming/Clients/Calling a Web API/query_github_api/: Cargo.toml
Rust Cookbook/Web Programming/Clients/Calling a Web API/query_github_api/src/: main.rs
Rust Cookbook/Web Programming/Extracting Links/check_webpage_for_broken_links/: Cargo.toml
Rust Cookbook/Web Programming/Extracting Links/check_webpage_for_broken_links/src/: main.rs
Rust Cookbook/Web Programming/Extracting Links/extract_all_links_from_webpage_html/: Cargo.toml
Rust Cookbook/Web Programming/Extracting Links/extract_all_links_from_webpage_html/src/: main.rs
Rust Cookbook/Web Programming/Extracting Links/extract_all_unique_links_from_media_wiki_markup/: Cargo.toml
Rust Cookbook/Web Programming/Media Types/parse_mime_type_of_http_response/: Cargo.toml
Rust by Example/: README.md
Rust by Example/Attributes/: README.md
Rust by Example/Cargo/: README.md
Rust by Example/Cargo/dependencies/: Cargo.toml  README.md
Rust by Example/Compatibility/: README.md
Rust by Example/Conversion/: README.md
Rust by Example/Crates/: README.md
Rust by Example/Custom Types/: README.md
Rust by Example/Error handling/: README.md
Rust by Example/Expressions/: README.md
Rust by Example/Flow of Control/: README.md
Rust by Example/Functions/: README.md
Rust by Example/Generics/: README.md
Rust by Example/Hello World/: README.md
Rust by Example/Meta/: README.md
Rust by Example/Modules/: README.md
Rust by Example/Primitives/: README.md
Rust by Example/Scoping rules/: README.md
Rust by Example/Std library types/: README.md
Rust by Example/Std misc/: README.md
Rust by Example/Testing/: README.md
Rust by Example/Traits/: README.md
Rust by Example/Types/: README.md
Rust by Example/Unsafe Operations/: README.md
Rust by Example/Variable Bindings/: README.md
Rust by Example/macro_rules!/: README.md
Rustacean Team/: README.md
Rustacean Team/Practical Rust 1.x Cookbook/: README.md
S. Klabnik, C. Nichols/: README.md
S. Klabnik, C. Nichols/The Rust Programming Language/: README.md
S. Klabnik, C. Nichols/The Rust Programming Language/ch07/01/my_project/: Cargo.toml  README.md
S. Klabnik, C. Nichols/The Rust Programming Language/ch07/01/my_project/src/: lib.rs  main.rs
T. McNamara/: README.md
T. McNamara/Rust in Action/: README.md
T. McNamara/Rust in Action/mget/: Cargo.toml  README.md
T. McNamara/Rust in Action/mget/examples/: mac.rs  resolve.rs
T. McNamara/Rust in Action/mget/src/: dns.rs  ethernet.rs  lib.rs
Utils/: README.md
Utils/cli_cat/: Cargo.toml  README.md
Utils/cli_echo/: Cargo.toml  README.md
Utils/cli_false/: Cargo.toml  README.md
Utils/cli_find/: Cargo.toml  README.md
Utils/cli_head/: Cargo.toml  README.md
Utils/cli_true/: Cargo.toml
Utils/cli_uniq/: Cargo.toml  README.md
Utils/cli_wc/: Cargo.toml  README.md
com/: README.md
(+929 files in other folders)
