[package]
name = "deserialize_toml_configuration_file_using_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
serde = { version = "1.0.162", features = ["derive"] }
toml = "0.7.3"
