[package]
name = "check_webpage_for_broken_links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = "0.11.18"
select = "0.6.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
