[package]
name = "extract_all_unique_links_from_media_wiki_markup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.8.3"
reqwest = "0.11.18"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
