[package]
name = "parse_mime_type_of_http_response"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
mime = "0.3.17"
reqwest = "0.11.18"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
