[package]
name = "my_project"
version = "0.1.0"
edition = "2021"
default-run = "my_project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "my_project"
path = "src/main.rs"

[[bin]]
name = "my_bin"
path = "src/bin/main.rs"

[dependencies]
